--- a/app/src/main/res/layout/activity_search_results.xml
+++ b/app/src/main/res/layout/activity_search_results.xml
@@ -21,6 +21,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="60dp"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
