--- a/app/src/main/res/layout/activity_specifiaction_inquiry2.xml
+++ b/app/src/main/res/layout/activity_specifiaction_inquiry2.xml
@@ -56,18 +56,22 @@
                 android:layout_height="wrap_content"
                 android:drawableRight="@mipmap/arrow_right"
                 android:padding="12dp"
+                android:visibility="gone"
                 android:text="石笼网"
                 android:textColor="@color/black_color"
                 android:textSize="14sp" />
 
-            <View style="@style/LineStyle" />
+            <View style="@style/LineStyle"
+                android:visibility="gone"/>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="12dp"
+                android:visibility="gone"
                 android:background="@color/view_background_gray_color" />
 
-            <View style="@style/LineStyle" />
+            <View style="@style/LineStyle"
+                android:visibility="gone"/>
 
             <TextView
                 android:layout_width="wrap_content"
