--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -81,6 +81,16 @@
 
             <View style="@style/LineStyle" />
 
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recyclerArticle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone">
+
+            </android.support.v7.widget.RecyclerView>
+
+            <View style="@style/LineStyle" />
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="12dp"
