--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -85,6 +85,8 @@
                 android:id="@+id/recyclerArticle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp"
                 android:visibility="gone">
 
             </android.support.v7.widget.RecyclerView>
