--- a/app/src/main/res/layout/activity_specifiaction.xml
+++ b/app/src/main/res/layout/activity_specifiaction.xml
@@ -38,6 +38,11 @@
         </RelativeLayout>
     </LinearLayout>
 
+
+
+
+
+
     <TextView
         android:id="@+id/tv_confirm"
         android:layout_width="match_parent"
@@ -70,12 +75,13 @@
 
                 <com.appjumper.silkscreen.view.MyGridView
                     android:id="@+id/gridview"
+                    style="@style/GridViewStyle"
                     android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginBottom="5dp"
-                    android:layout_marginLeft="12dp"
-                    style="@style/GridViewStyle"
-                    android:layout_height="wrap_content"></com.appjumper.silkscreen.view.MyGridView>
+                    android:layout_marginLeft="12dp"/>
+
             </LinearLayout>
 
             <View style="@style/LineStyle" />
@@ -96,14 +102,15 @@
                 android:textSize="14sp" />
 
             <View
-                style="@style/LineStyle"
-                android:layout_marginLeft="12dp" />
+                style="@style/LineStyle"/>
 
 
             <LinearLayout
                 android:id="@+id/ll_specification"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingLeft="12dp"
+                android:paddingRight="12dp"
                 android:orientation="vertical">
 
             </LinearLayout>
@@ -127,20 +134,23 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="描述"
+                    android:text="备注说明"
                     android:textColor="@color/black_color"
                     android:textSize="14sp" />
 
-                <EditText
+                <com.appjumper.silkscreen.view.MyEditText
                     android:id="@+id/et_remark"
                     android:layout_width="match_parent"
-                    android:layout_height="90dp"
+                    android:layout_height="180dp"
                     android:layout_marginTop="3dp"
-                    android:background="@null"
+                    android:background="@color/view_background_gray_color"
                     android:gravity="top"
                     android:padding="10dp"
-                    android:hint="您可以写写企业的优势，例如产品质量、服务等......"
-                    android:textColor="@color/black_color"
+                    android:inputType="textMultiLine"
+                    android:lineSpacingExtra="3dp"
+                    android:scrollbars="vertical"
+                    android:hint="材质上锌量、单捆重量、生产周期"
+                    android:textColor="@color/text_black_color"
                     android:textColorHint="@color/light_gray_color"
                     android:textSize="13sp" />
 
