--- a/app/src/main/res/layout/item_spec_choice_single.xml
+++ b/app/src/main/res/layout/item_spec_choice_single.xml
@@ -12,11 +12,11 @@
         android:button="@null"
         android:clickable="false"
         android:gravity="center_vertical"
-        android:drawableLeft="@drawable/selector_checkbox"
+        android:drawableLeft="@drawable/selector_checkbox_blue_round"
         android:drawablePadding="5dp"
         android:text="铁丝555555"
         android:textSize="14sp"
-        android:textColor="@color/black_color"/>
+        android:textColor="@color/text_black_color"/>
 
 </LinearLayout>
 
