--- a/app/src/main/res/layout/activity_specifiaction.xml
+++ b/app/src/main/res/layout/activity_specifiaction.xml
@@ -131,32 +131,46 @@
                 android:background="@color/while_color"
                 android:padding="12dp">
 
-                <TextView
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="备注说明"
-                    android:textColor="@color/black_color"
-                    android:textSize="14sp" />
+                    android:gravity="center_vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="备注说明"
+                        android:textColor="@color/black_color"
+                        android:textSize="14sp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="6dp"
+                        android:text="(最多1000字)"
+                        android:textSize="11sp"
+                        android:textColor="@color/light_gray_color"/>
+                </LinearLayout>
 
                 <com.appjumper.silkscreen.view.MyEditText
                     android:id="@+id/et_remark"
                     android:layout_width="match_parent"
                     android:layout_height="180dp"
-                    android:layout_marginTop="3dp"
+                    android:layout_marginTop="5dp"
                     android:background="@color/view_background_gray_color"
                     android:gravity="top"
                     android:padding="10dp"
                     android:inputType="textMultiLine"
                     android:lineSpacingExtra="3dp"
+                    android:maxLength="1000"
                     android:scrollbars="vertical"
-                    android:hint="材质上锌量、单捆重量、生产周期"
+                    android:hint=""
                     android:textColor="@color/text_black_color"
                     android:textColorHint="@color/light_gray_color"
                     android:textSize="13sp" />
 
             </LinearLayout>
 
-            <View style="@style/LineStyle" />
 
             <View
                 android:layout_width="match_parent"
