--- a/app/src/main/res/layout/activity_specifiaction_inquiry2.xml
+++ b/app/src/main/res/layout/activity_specifiaction_inquiry2.xml
@@ -82,14 +82,16 @@
                 android:textSize="14sp" />
 
             <View
-                style="@style/LineStyle"
-                android:layout_marginLeft="12dp" />
+                style="@style/LineStyle"/>
 
 
             <LinearLayout
                 android:id="@+id/ll_specification"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@color/while_color"
+                android:paddingLeft="12dp"
+                android:paddingRight="12dp"
                 android:orientation="vertical">
 
             </LinearLayout>
@@ -201,42 +203,42 @@
                 android:padding="12dp">
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="12dp"
                     android:gravity="center_vertical">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="备注说明"
-                        android:textColor="@color/theme_color"
+                        android:textColor="@color/black_color"
                         android:textSize="14sp" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="3dp"
-                        android:text="(最多200字)"
-                        android:textColor="@color/light_gray_color"
-                        android:textSize="13sp" />
+                        android:layout_marginLeft="6dp"
+                        android:text="(最多1000字)"
+                        android:textSize="11sp"
+                        android:textColor="@color/light_gray_color"/>
                 </LinearLayout>
 
-                <EditText
+                <com.appjumper.silkscreen.view.MyEditText
                     android:id="@+id/et_remark"
                     android:layout_width="match_parent"
-                    android:layout_height="90dp"
+                    android:layout_height="180dp"
+                    android:layout_marginTop="5dp"
+                    android:background="@color/view_background_gray_color"
                     android:gravity="top"
-                    android:background="@color/while_color"
-                    android:hint="还有什么对商家说的"
+                    android:padding="10dp"
                     android:inputType="textMultiLine"
                     android:lineSpacingExtra="3dp"
-                    android:maxLength="200"
-                    android:paddingLeft="5dp"
-                    android:paddingRight="5dp"
-                    android:textColor="@color/black_color"
+                    android:maxLength="1000"
+                    android:scrollbars="vertical"
+                    android:hint=""
+                    android:textColor="@color/text_black_color"
                     android:textColorHint="@color/light_gray_color"
-                    android:textSize="14sp" />
+                    android:textSize="13sp" />
             </LinearLayout>
 
             <View style="@style/LineStyle"/>
