--- a/app/src/main/res/layout/activity_specifiaction_stock.xml
+++ b/app/src/main/res/layout/activity_specifiaction_stock.xml
@@ -70,12 +70,12 @@
 
                 <com.appjumper.silkscreen.view.MyGridView
                     android:id="@+id/gridview"
+                    style="@style/GridViewStyle"
                     android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginBottom="5dp"
-                    android:layout_marginLeft="12dp"
-                    style="@style/GridViewStyle"
-                    android:layout_height="wrap_content"></com.appjumper.silkscreen.view.MyGridView>
+                    android:layout_marginLeft="12dp"/>
             </LinearLayout>
 
             <View style="@style/LineStyle" />
@@ -97,14 +97,15 @@
                 android:textSize="14sp" />
 
             <View
-                style="@style/LineStyle"
-                android:layout_marginLeft="12dp" />
+                style="@style/LineStyle" />
 
 
             <LinearLayout
                 android:id="@+id/ll_specification"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingLeft="12dp"
+                android:paddingRight="12dp"
                 android:orientation="vertical">
 
             </LinearLayout>
@@ -160,29 +161,48 @@
                 android:background="@color/while_color"
                 android:padding="12dp">
 
-                <TextView
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="描述"
-                    android:textColor="@color/black_color"
-                    android:textSize="14sp" />
+                    android:gravity="center_vertical">
 
-                <EditText
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="备注说明"
+                        android:textColor="@color/black_color"
+                        android:textSize="14sp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="6dp"
+                        android:text="(最多1000字)"
+                        android:textSize="11sp"
+                        android:textColor="@color/light_gray_color"/>
+                </LinearLayout>
+
+
+
+                <com.appjumper.silkscreen.view.MyEditText
                     android:id="@+id/et_remark"
                     android:layout_width="match_parent"
-                    android:layout_height="90dp"
-                    android:layout_marginTop="3dp"
-                    android:background="@null"
+                    android:layout_height="180dp"
+                    android:layout_marginTop="5dp"
+                    android:background="@color/view_background_gray_color"
                     android:gravity="top"
                     android:padding="10dp"
-                    android:hint="您可以写写企业的优势，例如产品质量、服务等......"
-                    android:textColor="@color/black_color"
+                    android:inputType="textMultiLine"
+                    android:lineSpacingExtra="3dp"
+                    android:maxLength="1000"
+                    android:scrollbars="vertical"
+                    android:hint=""
+                    android:textColor="@color/text_black_color"
                     android:textColorHint="@color/light_gray_color"
                     android:textSize="13sp" />
 
             </LinearLayout>
 
-            <View style="@style/LineStyle" />
 
             <View
                 android:layout_width="match_parent"
