--- a/app/src/main/res/layout/item_spec_choice_single.xml
+++ b/app/src/main/res/layout/item_spec_choice_single.xml
@@ -8,7 +8,7 @@
     <CheckBox
         android:id="@+id/chkSpec"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="25dp"
         android:button="@null"
         android:clickable="false"
         android:gravity="center_vertical"
