--- a/app/src/main/res/layout/fragment_home2.xml
+++ b/app/src/main/res/layout/fragment_home2.xml
@@ -83,7 +83,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:visibility="gone">
+                android:visibility="visible">
 
    <!--**********************************热门产品询价*********************************-->
 
@@ -463,8 +463,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@color/while_color"
-                        android:paddingBottom="2dp"
-                        android:paddingTop="12dp">
+                        android:paddingTop="10dp">
 
                         <TextView
                             android:id="@+id/tv_logistics"
@@ -475,6 +474,8 @@
                             android:drawablePadding="6dp"
                             android:drawableTop="@mipmap/icon_home_logistics"
                             android:gravity="center"
+                            android:paddingTop="2dp"
+                            android:paddingBottom="2dp"
                             android:text="物流"
                             android:textColor="@color/black_color"
                             android:textSize="14sp" />
@@ -484,9 +485,12 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
+                            android:background="@drawable/select_white_background"
                             android:drawablePadding="6dp"
                             android:drawableTop="@mipmap/icon_home_equipment"
                             android:gravity="center"
+                            android:paddingTop="2dp"
+                            android:paddingBottom="2dp"
                             android:text="设备"
                             android:textColor="@color/black_color"
                             android:textSize="14sp" />
@@ -500,6 +504,8 @@
                             android:drawablePadding="6dp"
                             android:drawableTop="@mipmap/icon_home_plant"
                             android:gravity="center"
+                            android:paddingTop="2dp"
+                            android:paddingBottom="2dp"
                             android:text="厂房"
                             android:textColor="@color/black_color"
                             android:textSize="14sp" />
@@ -513,10 +519,13 @@
                             android:drawablePadding="6dp"
                             android:drawableTop="@mipmap/icon_home_recruitment"
                             android:gravity="center"
+                            android:paddingTop="2dp"
+                            android:paddingBottom="2dp"
                             android:text="招聘"
                             android:textColor="@color/black_color"
                             android:textSize="14sp" />
                     </LinearLayout>
+
 
 
                     <LinearLayout
@@ -524,153 +533,90 @@
                         android:layout_height="wrap_content"
                         android:background="@color/while_color"
                         android:orientation="horizontal"
-                        android:padding="12dp">
+                        android:paddingLeft="12dp"
+                        android:paddingBottom="12dp">
 
                         <RelativeLayout
                             android:id="@+id/rl_tender"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:background="@mipmap/iocn_home_tender_bg">
+                            android:paddingRight="12dp"
+                            android:paddingTop="12dp">
 
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_centerInParent="true"
-                                android:background="@drawable/transparent_background"
-                                android:paddingBottom="13dp"
-                                android:paddingLeft="42dp"
-                                android:paddingRight="42dp"
-                                android:paddingTop="13dp" />
-
-                            <LinearLayout
+                            <RelativeLayout
                                 android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_centerVertical="true"
-                                android:layout_marginLeft="3dp"
-                                android:layout_marginRight="3dp"
-                                android:gravity="center_vertical">
+                                android:layout_height="wrap_content">
 
-                                <View
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="0.5dp"
-                                    android:layout_weight="1"
-                                    android:background="@color/while_color" />
+                                <ImageView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:src="@mipmap/home_tender"/>
 
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginLeft="3dp"
-                                    android:layout_marginRight="3dp"
+                                    android:layout_centerInParent="true"
                                     android:text="招/投标信息"
                                     android:textColor="@color/while_color"
-                                    android:textSize="12sp" />
-
-                                <View
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="0.5dp"
-                                    android:layout_weight="1"
-                                    android:background="@color/while_color" />
-                            </LinearLayout>
-
+                                    android:textSize="13sp"/>
+                            </RelativeLayout>
                         </RelativeLayout>
+
 
                         <RelativeLayout
                             android:id="@+id/rl_exhibition"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="12dp"
-                            android:layout_marginRight="12dp"
                             android:layout_weight="1"
-                            android:background="@mipmap/icon_home_exhibition_bg">
+                            android:paddingRight="12dp"
+                            android:paddingTop="12dp">
 
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_centerInParent="true"
-                                android:background="@drawable/transparent_background"
-                                android:paddingBottom="13dp"
-                                android:paddingLeft="41dp"
-                                android:paddingRight="41dp"
-                                android:paddingTop="13dp" />
-
-                            <LinearLayout
+                            <RelativeLayout
                                 android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_centerVertical="true"
-                                android:layout_marginLeft="3dp"
-                                android:layout_marginRight="3dp"
-                                android:gravity="center_vertical">
+                                android:layout_height="wrap_content">
 
-                                <View
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="0.5dp"
-                                    android:layout_weight="1"
-                                    android:background="@color/while_color" />
+                                <ImageView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:src="@mipmap/home_exhibition"/>
 
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginLeft="6dp"
-                                    android:layout_marginRight="6dp"
+                                    android:layout_centerInParent="true"
                                     android:text="展会信息"
                                     android:textColor="@color/while_color"
-                                    android:textSize="12sp" />
-
-                                <View
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="0.5dp"
-                                    android:layout_weight="1"
-                                    android:background="@color/while_color" />
-                            </LinearLayout>
+                                    android:textSize="13sp"/>
+                            </RelativeLayout>
                         </RelativeLayout>
+
 
                         <RelativeLayout
                             android:id="@+id/rl_news"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:background="@mipmap/icon_home_news_bg">
+                            android:paddingRight="12dp"
+                            android:paddingTop="12dp">
 
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_centerInParent="true"
-                                android:background="@drawable/transparent_background"
-                                android:paddingBottom="13dp"
-                                android:paddingLeft="41dp"
-                                android:paddingRight="41dp"
-                                android:paddingTop="13dp" />
-
-                            <LinearLayout
+                            <RelativeLayout
                                 android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_centerVertical="true"
-                                android:layout_marginLeft="3dp"
-                                android:layout_marginRight="3dp"
-                                android:gravity="center_vertical">
+                                android:layout_height="wrap_content">
 
-                                <View
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="0.5dp"
-                                    android:layout_weight="1"
-                                    android:background="@color/while_color" />
+                                <ImageView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:src="@mipmap/home_news"/>
 
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginLeft="6dp"
-                                    android:layout_marginRight="6dp"
+                                    android:layout_centerInParent="true"
                                     android:text="行业新闻"
                                     android:textColor="@color/while_color"
-                                    android:textSize="12sp" />
-
-                                <View
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="0.5dp"
-                                    android:layout_weight="1"
-                                    android:background="@color/while_color" />
-                            </LinearLayout>
+                                    android:textSize="13sp"/>
+                            </RelativeLayout>
                         </RelativeLayout>
 
                     </LinearLayout>
