--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -381,13 +381,15 @@
 
                 <View
                     style="@style/LineStyle"
-                    android:layout_marginLeft="12dp" />
+                    android:layout_marginLeft="12dp"
+                    android:visibility="gone"/>
 
                 <RelativeLayout
                     android:id="@+id/rl_collect"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/select_white_background">
+                    android:background="@drawable/select_white_background"
+                    android:visibility="gone">
 
                     <TextView
                         android:layout_width="wrap_content"
