--- a/app/src/main/res/layout/item_spec_choice_multi.xml
+++ b/app/src/main/res/layout/item_spec_choice_multi.xml
@@ -8,9 +8,7 @@
     <CheckBox
         android:id="@+id/chkSpec"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
+        android:layout_height="26dp"
         android:button="@null"
         android:clickable="false"
         android:gravity="center_vertical"
