--- a/app/src/main/res/layout/layout_empty_view_common.xml
+++ b/app/src/main/res/layout/layout_empty_view_common.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:gravity="center"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
     <TextView
-        android:id="@+id/textViewMessage"
+        android:id="@+id/txtMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:drawablePadding="11dp"
-        android:gravity="center_horizontal"
         android:paddingBottom="20dp"
         android:paddingTop="20dp"
         android:text="暂无内容 ~ "
