--- a/app/src/main/res/layout/activity_enterprise_list.xml
+++ b/app/src/main/res/layout/activity_enterprise_list.xml
@@ -49,7 +49,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@+id/rl_title"
-            app:dddividerColor="@color/view_background_gray_color"
+            app:dddividerColor="@color/transparent_color"
             app:ddmaskColor="#20000000"
             app:ddmenuBackgroundColor="@color/while_color"
             app:ddmenuSelectedIcon="@mipmap/icon_arrows_up"
@@ -58,6 +58,44 @@
             app:ddtextSelectedColor="@color/theme_color"
             app:ddtextUnselectedColor="@color/black_color"
             app:ddunderlineColor="@color/view_background_gray_color" />
+
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/rl_title">
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
+
+        <TextView
+            android:id="@+id/txtProductSelect"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@color/while_color"
+            android:drawableRight="@mipmap/icon_arrows_down"
+            android:gravity="center"
+            android:paddingBottom="11dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:paddingTop="11dp"
+            android:text="全部产品"
+            android:textColor="@color/text_black_color"
+            android:textSize="13sp" />
+
+    </LinearLayout>
+
+
+
 
 
 </RelativeLayout>
