--- a/app/src/main/res/layout/activity_truck_release.xml
+++ b/app/src/main/res/layout/activity_truck_release.xml
@@ -147,6 +147,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="12dp"
+                        android:gravity="center_vertical"
                         android:text="货物名称"
                         android:textColor="@color/black_color"
                         android:textSize="14sp" />
@@ -162,11 +163,14 @@
                             android:layout_height="wrap_content"
                             android:layout_marginRight="12dp"
                             android:background="@null"
-                            android:hint="请输入货物名称"
+                            android:gravity="center_vertical"
+                            android:hint="请选择货物"
+                            android:drawableRight="@mipmap/icon_arrows_right"
                             android:imeOptions="actionNext"
+                            android:focusable="false"
                             android:maxLength="20"
-                            android:paddingBottom="12dp"
-                            android:paddingTop="12dp"
+                            android:paddingBottom="10dp"
+                            android:paddingTop="10dp"
                             android:singleLine="true"
                             android:textColor="@color/black_color"
                             android:textColorHint="@color/light_gray_color"
