--- a/app/src/main/res/layout/fragment_dynamic_data.xml
+++ b/app/src/main/res/layout/fragment_dynamic_data.xml
@@ -2,15 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/view_background_gray_color"
     android:orientation="vertical">
 
     <com.chanven.lib.cptr.PtrClassicFrameLayout
-        android:id="@+id/ptrResult"
+        android:id="@+id/ptrLayt"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/recyclerResult"
+            android:id="@+id/recyclerData"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scrollbars="vertical">
