--- a/app/src/main/res/layout/layout_my_point_header.xml
+++ b/app/src/main/res/layout/layout_my_point_header.xml
@@ -30,7 +30,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="12dp"
-                android:text="23463"
+                android:text=""
                 android:textColor="@color/while_color"
                 android:textSize="45sp" />
             <TextView
