--- a/app/src/main/res/layout/item_recycler_dynamic_job.xml
+++ b/app/src/main/res/layout/item_recycler_dynamic_job.xml
@@ -20,7 +20,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:visibility="gone"
         android:text="52000元/年"
         android:textSize="14sp"
         android:textColor="#ff6000"/>
@@ -31,8 +30,9 @@
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/imgViHead"
         android:layout_toLeftOf="@id/txtPrice"
-        android:maxLines="1"
+        android:maxLines="2"
         android:ellipsize="end"
+        android:lineSpacingExtra="2dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:text="铁丝拔丝现货"
