--- a/app/src/main/res/layout/fragment_article_detail.xml
+++ b/app/src/main/res/layout/fragment_article_detail.xml
@@ -58,6 +58,54 @@
                 android:paddingRight="12dp"/>
 
 
+            <LinearLayout
+                android:id="@+id/llPraise"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="20dp"
+                android:visibility="gone"
+                android:gravity="center_vertical">
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"/>
+
+                <ImageView
+                    android:id="@+id/imgViUp"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:src="@mipmap/praise_black"/>
+
+                <TextView
+                    android:id="@+id/txtUpNum"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="3dp"
+                    android:text="(0)"
+                    android:textSize="13sp"
+                    android:textColor="@color/text_gray_light_color"/>
+
+                <ImageView
+                    android:id="@+id/imgViDown"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_marginLeft="30dp"
+                    android:src="@mipmap/tread_black"/>
+
+                <TextView
+                    android:id="@+id/txtDownNum"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="3dp"
+                    android:layout_marginRight="20dp"
+                    android:text="(0)"
+                    android:textSize="13sp"
+                    android:textColor="@color/text_gray_light_color"/>
+            </LinearLayout>
+
+
         </LinearLayout>
     </ScrollView>
 
