--- a/app/src/main/res/layout/activity_product_select.xml
+++ b/app/src/main/res/layout/activity_product_select.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content">
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/imgViSearch"
             android:layout_width="match_parent"
             android:layout_height="55dp"
             android:layout_marginLeft="20dp"
@@ -23,7 +23,7 @@
             android:id="@+id/imageView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/imageView"
+            android:layout_alignStart="@id/imgViSearch"
             android:layout_centerVertical="true"
             android:layout_marginLeft="12dp"
             android:src="@mipmap/icon_search_icon04" />
