--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -18,11 +18,7 @@
         android:orientation="vertical"
         android:background="@color/theme_color"
         >
-        <!--<View
-            android:id="@+id/view"
-            style="@style/transparent"
-            android:layout_height="25dp"
-            />-->
+
         <RadioGroup
             android:id="@+id/rg_tab"
             android:layout_width="match_parent"
@@ -73,8 +69,8 @@
 
     <com.appjumper.silkscreen.view.pulltorefresh.PullToRefreshPagedListView
         android:id="@+id/listview"
-        android:layout_marginBottom="-50dp"
-        style="@style/ListViewDividerStyle" >
+        style="@style/ListViewDividerStyle"
+        android:layout_marginBottom="-30dp">
     </com.appjumper.silkscreen.view.pulltorefresh.PullToRefreshPagedListView>
 
 
