--- a/app/src/main/res/layout/fragment_dynamic.xml
+++ b/app/src/main/res/layout/fragment_dynamic.xml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
-    <include layout="@layout/layout_header_with_text"/>
+    <include
+        android:id="@+id/llTitle"
+        layout="@layout/layout_header_with_text"/>
+
 
     <android.support.design.widget.TabLayout
         android:id="@+id/tabLayt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/llTitle"
         android:background="@color/white"
         app:tabBackground="@color/white"
         app:tabIndicatorColor="@color/theme_color"
@@ -19,12 +23,52 @@
         app:tabSelectedTextColor="@color/theme_color"/>
 
 
-    <View style="@style/LineStyle" />
+    <View
+        android:id="@+id/divider"
+        style="@style/LineStyle"
+        android:layout_below="@id/tabLayt"/>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_below="@id/divider"/>
 
 
-</LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/llLogin"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        android:background="@color/view_background_gray_color"
+        android:gravity="center"
+        android:layout_below="@id/llTitle"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="您还未登录"
+            android:textColor="@color/text_gray_light_color"
+            android:textSize="15sp" />
+
+        <TextView
+            android:id="@+id/txtLogin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/theme_gray_background"
+            android:paddingBottom="9dp"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:paddingTop="9dp"
+            android:text="立即登录"
+            android:textColor="@color/theme_color"
+            android:textSize="15sp" />
+    </LinearLayout>
+
+
+</RelativeLayout>
