--- a/app/src/main/res/layout/item_lv_stock.xml
+++ b/app/src/main/res/layout/item_lv_stock.xml
@@ -68,9 +68,19 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
+                    android:maxLines="1"
+                    android:ellipsize="end"
+                    android:maxWidth="200dp"
                     android:text="阿普匠丝网有限公司"
                     android:textColor="@color/black_color"
                     android:textSize="13sp" />
+
+                <ImageView
+                    android:id="@+id/img_auth_status"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="6dp"
+                    android:src="@mipmap/icon_certification_green" />
 
                 <ImageView
                     android:id="@+id/img_enterprise_auth_status"
