--- a/app/src/main/res/layout/activity_company_details.xml
+++ b/app/src/main/res/layout/activity_company_details.xml
@@ -62,17 +62,25 @@
                     android:textSize="16sp" />
 
                 <ImageView
+                    android:id="@+id/tv_auth_status"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"
+                    android:layout_marginLeft="8dp"
+                    android:src="@mipmap/icon_certification_green" />
+
+                <ImageView
                     android:id="@+id/tv_enterprise_auth_status"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="9dp"
+                    android:layout_marginLeft="8dp"
                     android:src="@mipmap/icon_certification" />
 
                 <ImageView
                     android:id="@+id/tv_enterprise_productivity_auth_status"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="9dp"
+                    android:layout_marginLeft="8dp"
                     android:src="@mipmap/icon_certification_yellow" />
             </LinearLayout>
 
