--- a/app/src/main/res/layout/fragment_trend_chart.xml
+++ b/app/src/main/res/layout/fragment_trend_chart.xml
@@ -6,13 +6,42 @@
     android:orientation="vertical">
 
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="12dp"
-        android:text="注意：走势图安平市场不含税均价"
-        android:textColor="@color/text_gray_color"
-        android:textSize="12sp" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="12dp"
+            android:paddingRight="12dp"
+            android:paddingTop="12dp"
+            android:text="注意：走势图为安平市场不含税均价"
+            android:textColor="@color/text_gray_color"
+            android:textSize="12sp" />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+
+        <TextView
+            android:id="@+id/txtDetail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="12dp"
+            android:paddingLeft="12dp"
+            android:paddingRight="12dp"
+            android:text="详情"
+            android:textColor="@color/theme_color"
+            android:textSize="12sp"/>
+
+    </LinearLayout>
+
+
+
+
+
     <LinearLayout
         android:id="@+id/l_avg_list"
         android:layout_width="match_parent"
