--- a/app/src/main/res/layout/item_lv_enterprise_list.xml
+++ b/app/src/main/res/layout/item_lv_enterprise_list.xml
@@ -35,9 +35,19 @@
                     android:id="@+id/tv_company_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="阿普匠丝网有限公司"
+                    android:maxWidth="200dp"
+                    android:maxLines="1"
+                    android:ellipsize="end"
+                    android:text="阿普匠丝网有限公司阿普匠丝网有限公司阿普匠丝网有限公司"
                     android:textColor="@color/black_color"
                     android:textSize="13sp" />
+
+                <ImageView
+                    android:id="@+id/tv_auth_status"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="6dp"
+                    android:src="@mipmap/icon_certification_green" />
 
                 <ImageView
                     android:id="@+id/tv_enterprise_auth_status"
