--- a/app/src/main/res/layout/item_recycler_line_hot_inquiry.xml
+++ b/app/src/main/res/layout/item_recycler_line_hot_inquiry.xml
@@ -26,6 +26,7 @@
         android:textColor="@color/theme_color"/>
 
     <TextView
+        android:id="@+id/txtCount"
         android:layout_width="95dp"
         android:layout_height="wrap_content"
         android:gravity="center"
