--- a/app/src/main/res/layout/item_lv_truck.xml
+++ b/app/src/main/res/layout/item_lv_truck.xml
@@ -35,6 +35,9 @@
                     android:id="@+id/tv_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:maxLines="1"
+                    android:ellipsize="end"
+                    android:maxWidth="128dp"
                     android:textColor="@color/text_gray_color"
                     android:textSize="14sp"
                     android:text="深圳市阿普匠科技有限公司"
@@ -63,7 +66,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentRight="true"
-                        android:text="11.01 19:02"
+                        android:text="2017-05-27 16:56:39"
                         android:textColor="@color/text_gray_color"
                         android:textSize="11sp" />
 
