--- a/app/src/main/res/layout/item_logistics_standing_listview.xml
+++ b/app/src/main/res/layout/item_logistics_standing_listview.xml
@@ -34,6 +34,9 @@
                     android:id="@+id/tv_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:maxLines="1"
+                    android:ellipsize="end"
+                    android:maxWidth="128dp"
                     android:textColor="@color/text_gray_color"
                     android:textSize="14sp"
                     android:text="深圳市阿普匠科技有限公司"
