--- a/app/src/main/res/layout/activity_enterprise_release.xml
+++ b/app/src/main/res/layout/activity_enterprise_release.xml
@@ -426,13 +426,28 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
-                    <TextView
+                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="12dp"
-                        android:text="备注说明"
-                        android:textColor="@color/black_color"
-                        android:textSize="14sp" />
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="备注说明"
+                            android:textColor="@color/black_color"
+                            android:textSize="14sp" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="3dp"
+                            android:text="(最多200字)"
+                            android:textColor="@color/light_gray_color"
+                            android:textSize="10sp"/>
+
+                    </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -446,20 +461,26 @@
                             android:layout_marginRight="12dp"
                             android:background="@null"
                             android:hint="点击输入备注说明"
+                            android:inputType="textMultiLine"
+                            android:minLines="2"
+                            android:lineSpacingExtra="2dp"
+                            android:maxLength="200"
                             android:paddingBottom="12dp"
                             android:paddingTop="12dp"
                             android:textColor="@color/black_color"
                             android:textColorHint="@color/light_gray_color"
                             android:textSize="14sp" />
 
-                        <View style="@style/LineStyle" />
+                        <View style="@style/LineStyle"
+                            android:visibility="gone"/>
                     </LinearLayout>
 
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:visibility="gone">
 
                     <TextView
                         android:layout_width="wrap_content"
