--- a/app/src/main/res/layout/fragment_search_logistics.xml
+++ b/app/src/main/res/layout/fragment_search_logistics.xml
@@ -11,7 +11,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/while_color"
-        android:padding="20dp">
+        android:paddingTop="15dp"
+        android:paddingBottom="15dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp">
 
         <TextView
             android:id="@+id/tv_start"
@@ -19,11 +22,11 @@
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:drawableLeft="@mipmap/icon_addition18"
-            android:drawablePadding="6dp"
+            android:drawablePadding="3dp"
             android:gravity="center"
             android:text="起点地址"
             android:textColor="@color/text_gray_color"
-            android:textSize="18sp" />
+            android:textSize="17sp" />
 
         <ImageView
             android:id="@+id/iv_dzqh"
@@ -38,11 +41,11 @@
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:drawableLeft="@mipmap/icon_addition18"
-            android:drawablePadding="6dp"
+            android:drawablePadding="3dp"
             android:gravity="center"
             android:text="终点地址"
             android:textColor="@color/text_gray_color"
-            android:textSize="18sp" />
+            android:textSize="17sp" />
     </LinearLayout>
 
 
