--- a/app/src/main/res/layout/activity_enterprise_create2.xml
+++ b/app/src/main/res/layout/activity_enterprise_create2.xml
@@ -386,14 +386,29 @@
                 android:background="@drawable/shape_item_area_bg"
                 android:orientation="vertical">
 
-                <TextView
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="12dp"
-                    android:layout_marginTop="12dp"
-                    android:text="* 企业简介"
-                    android:textColor="@color/black_color"
-                    android:textSize="15sp" />
+                    android:layout_marginTop="12dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="* 企业简介"
+                        android:textColor="@color/black_color"
+                        android:textSize="15sp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="6dp"
+                        android:text="(最多1000字)"
+                        android:textSize="11sp"
+                        android:textColor="@color/light_gray_color"/>
+                </LinearLayout>
+
+
 
                 <View
                     style="@style/LineStyle"
@@ -409,6 +424,7 @@
                     android:hint="您可以写写企业的优势，例如产品质量、服务等......"
                     android:inputType="textMultiLine"
                     android:minLines="8"
+                    android:maxLength="1000"
                     android:textColor="@color/black_color"
                     android:textSize="13sp" />
 
